<resources>
    <string name="app_name">ReunidosUX</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="listas">Listas de la\n comunidad</string>
    <string name="mis">Mis listas\n creadas</string>
    <string name="offer">Ver\n ofertas</string>
    <string name="popup">Funcionalidad no disponible en esta versión</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
