<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingTop="20dp"
    tools:context="com.reunidos.reunidosux.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logoreuni"
                android:layout_gravity="center"/>


            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:background="@drawable/edittexto"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:background="@drawable/edittexto"
                android:maxLines="1"
                android:singleLine="true"/>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>



        </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tvsl"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"

        android:textAlignment="center"
        android:text="2017 - Bee apps"


        />


</LinearLayout>
